objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Account_Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created as part of SDT-24848. the field will be used to look up the Account Position table with Asset.</description>
        <label>Account Position</label>
        <referenceTo>Account_Position__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acorn_SBID__c</fullName>
        <externalId>true</externalId>
        <label>SBID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acorn_SCOD__c</fullName>
        <label>SCOD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acorn_SID__c</fullName>
        <label>SID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acorn_Update_Datetime__c</fullName>
        <label>Acorn Update Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Acorn_Vendor_Id__c</fullName>
        <description>Acorn Database ID for Vendor. Not to be displayed on screen only used for backend purpose.</description>
        <label>Acorn Vendor ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox will be checked only if the related Project code is Active</description>
        <label>Is Project Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BusinessUnit_Name__c</fullName>
        <label>BusinessUnit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bypass_Cost_Grid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Cost Grid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_MAS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass MAS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created as part of SDT-24212. field will be used to lookup material product2 table with Asset.</description>
        <inlineHelpText>The field will be used to lookup material product2 table with Asset.</inlineHelpText>
        <label>CPQ Material</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Assets (CPQ Material)</relationshipLabel>
        <relationshipName>Assets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPQ_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SDT-24212 Add Change AM</description>
        <inlineHelpText>The field is dedicated to related CPQ Products of the Asset header/Detail. Eg: when it&apos;s Asset Header, and if Product2 is 20 Yard Open Top, then this field will have the Open Top product2 Id, and If its Asset Detail of Haul or any Service, this field will have Haul or that Service product2 Id.</inlineHelpText>
        <label>CPQ Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Assets (CPQ Products)</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Customer Cost Category</description>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Container_Position__c</fullName>
        <description>Where the Container is positioned</description>
        <label>Container Position</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Notes__c</fullName>
        <label>Contract Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Core_MAS_Unique__c</fullName>
        <label>MAS Unique #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Core_Schedule__c</fullName>
        <label>Schedule</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <label>Cost Center</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Currency__c</fullName>
        <label>Cost Currency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Increment_1__c</fullName>
        <label>Cost Increment 1</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Increment_2__c</fullName>
        <label>Cost Increment 2</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Increment_3__c</fullName>
        <label>Cost Increment 3</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Minimum_Quantity__c</fullName>
        <label>Cost Minimum Quantity</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Model_Type__c</fullName>
        <label>Cost Model Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Price</fullName>
                </value>
                <value>
                    <fullName>Per Unit</fullName>
                </value>
                <value>
                    <fullName>Rebate</fullName>
                </value>
                <value>
                    <fullName>Stepped</fullName>
                </value>
                <value>
                    <fullName>Zero Charge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Price_1__c</fullName>
        <label>Cost Price 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Price_2__c</fullName>
        <label>Cost Price 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Price_3__c</fullName>
        <label>Cost Price 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Tax_Inclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cost Tax Inclusive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Total_Tax__c</fullName>
        <label>Cost Total Tax</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Unit__c</fullName>
        <label>Cost Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_UpTo_1__c</fullName>
        <label>Cost UpTo 1</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_UpTo_2__c</fullName>
        <label>Cost UpTo 2</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_UpTo_3__c</fullName>
        <label>Cost UpTo 3</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Created_By_User_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to capture the Created By User Information from Acorn</description>
        <label>Created By User Id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Account_Number__c</fullName>
        <label>Customer Account Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dumpster_Service_Style__c</fullName>
        <description>To capture dumpster service styles on the Asset product - this should be deprecated with CPQ - This should either be considered an attribute or standalone product types</description>
        <label>Dumpster Service Style</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Preference</fullName>
                </value>
                <value>
                    <fullName>Front Load Container</fullName>
                </value>
                <value>
                    <fullName>Rear Load Container</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dumpster_Style__c</fullName>
        <description>To capture dumpster styles on the Asset product - this should be deprecated with CPQ - This should either be considered an attribute or standalone product types</description>
        <label>Dumpster Style</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat Top</fullName>
                </value>
                <value>
                    <fullName>Slant Top</fullName>
                </value>
                <value>
                    <fullName>Cathedral</fullName>
                </value>
                <value>
                    <fullName>No Preference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>Length of Service, for example Temp, Perm or Seas</description>
        <label>Duration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Temporary</fullName>
                </value>
                <value>
                    <fullName>Permanent</fullName>
                </value>
                <value>
                    <fullName>Seasonal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EDI_Price_Source__c</fullName>
        <description>Source for EDI Pricing</description>
        <label>EDI Price Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACRN</fullName>
                </value>
                <value>
                    <fullName>INVPD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date_Based_on_Project_code__c</fullName>
        <label>End Date Based on Project code</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date_Warning__c</fullName>
        <description>End Date Passed</description>
        <formula>IF(ISBLANK(End_Date__c),&quot;&quot;, IF(End_Date__c &lt;  TODAY(),IMAGE(&quot;/resource/warning&quot;, &quot;End Date Passed&quot;,20,20),&quot; &quot;))</formula>
        <inlineHelpText>End Date Passed</inlineHelpText>
        <label>Is Ended</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Dated_Asset__c</fullName>
        <formula>(End_Date__c - 14) &lt; TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Dated Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Equipment_Owner__c</fullName>
        <label>Equipment Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Size__c</fullName>
        <formula>TEXT(Product2.Container_Size__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Equipment Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Type__c</fullName>
        <formula>TEXT(Product2.Equipment_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Equipment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Every__c</fullName>
        <label>Every</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exception_Comments__c</fullName>
        <description>Exception Commons on Service in Acorn</description>
        <label>Exception Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exception_Effective_Date__c</fullName>
        <description>Exception Effective Date on Service in Acorn</description>
        <label>Exception Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exception_Reason_Detail__c</fullName>
        <description>Exception Reason Detail on Service in Acorn.</description>
        <label>Exception Reason Detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAM Billed</fullName>
                </value>
                <value>
                    <fullName>Cancelled Service</fullName>
                </value>
                <value>
                    <fullName>Cancelled Service - Permanently End</fullName>
                </value>
                <value>
                    <fullName>Client/Location Launch</fullName>
                </value>
                <value>
                    <fullName>Client Cancelled Request</fullName>
                </value>
                <value>
                    <fullName>Client CPI</fullName>
                </value>
                <value>
                    <fullName>Client Profitability Improvements</fullName>
                </value>
                <value>
                    <fullName>Client Renewal</fullName>
                </value>
                <value>
                    <fullName>Client Requested Change</fullName>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
                <value>
                    <fullName>Co-Mingle Service</fullName>
                </value>
                <value>
                    <fullName>Contract Renewal</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Data Error Fix</fullName>
                </value>
                <value>
                    <fullName>Data Error Fix - Permanently End</fullName>
                </value>
                <value>
                    <fullName>Decrease</fullName>
                </value>
                <value>
                    <fullName>Diversion</fullName>
                </value>
                <value>
                    <fullName>Doesn&apos;t Alter Contractual Information</fullName>
                </value>
                <value>
                    <fullName>Duplicate Payable</fullName>
                </value>
                <value>
                    <fullName>Equipment Accessories</fullName>
                </value>
                <value>
                    <fullName>Flat Rate Charged</fullName>
                </value>
                <value>
                    <fullName>Franchise/City Service Area</fullName>
                </value>
                <value>
                    <fullName>Franchise/City Vendor</fullName>
                </value>
                <value>
                    <fullName>Fuel</fullName>
                </value>
                <value>
                    <fullName>Hauler Charging Less</fullName>
                </value>
                <value>
                    <fullName>Inactive Spec Location or Client</fullName>
                </value>
                <value>
                    <fullName>Inactive spec loc or client</fullName>
                </value>
                <value>
                    <fullName>Incorrect Division</fullName>
                </value>
                <value>
                    <fullName>Incorrect Vendor</fullName>
                </value>
                <value>
                    <fullName>Increase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exception_Reason__c</fullName>
        <description>Exception Reason on Service in Acorn.</description>
        <label>Exception Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Schedule</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Vendor Acquisition</fullName>
                </value>
                <value>
                    <fullName>Client Initiated Change</fullName>
                </value>
                <value>
                    <fullName>Oakleaf Initiated Change</fullName>
                </value>
                <value>
                    <fullName>Vendor Initiated Change</fullName>
                </value>
                <value>
                    <fullName>Retire Payable Exception</fullName>
                </value>
                <value>
                    <fullName>Cancel Payable Exception</fullName>
                </value>
                <value>
                    <fullName>Un-Retire Payable Exception</fullName>
                </value>
                <value>
                    <fullName>WO Component Cancelllation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclude_Holidays__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Holidays</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_Saturdays__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Saturdays</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_Sundays__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Sundays</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Friday_AM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Friday AM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Friday_Frequency__c</fullName>
        <label>Friday Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Friday_PM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Friday PM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Friday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Friday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GL_Code__c</fullName>
        <label>GL Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GateCode__c</fullName>
        <formula>Account_Position__r.Gate_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GateCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_Service_Events__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Service Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOpenTaskGridTicket__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasOpenTaskGridTicket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Extra_Pickup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates when scheduled server has On-Call Extra Pickup defined</description>
        <label>Has XPU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_InvoiceReadytoBillStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has_InvoiceReadytoBillStatus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InvoiceReadytobillMaxEndDate__c</fullName>
        <label>InvoiceReadytobillMaxEndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <formula>OR((End_Date__c + 14)&gt;=today(),ISNULL(End_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Core_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Core Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Hold_Until_Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hold Until Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Locally_Billed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Locally Billed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Monitored__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do we bill for local services</description>
        <label>Is Monitored</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Null_End_Date__c</fullName>
        <formula>IF(OR(ISNULL(End_Date__c),ISBLANK(End_Date__c)),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Null End Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Override_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Self_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Code__c</fullName>
        <formula>Location__r.Customer_Location_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service Location</description>
        <label>Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Location</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets_Location</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lower_Case_Asset_Details__c</fullName>
        <description>Concatenating asset info for usage in email templates</description>
        <formula>LOWER(TEXT( Product2.Container_Size__c ) + &quot; &quot; + TEXT( Material_Type__c ) + &quot; &quot; + TEXT(Product2.Equipment_Type__c))</formula>
        <label>Lower case Asset details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MASBox__c</fullName>
        <label>MASBox</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAS_Account_Number__c</fullName>
        <label>MAS Account Number</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAS_Company_Account_Number__c</fullName>
        <formula>MAS_Company_Code__c+&apos;-&apos;+MAS_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MAS Company # - Account #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAS_Company_Code__c</fullName>
        <label>MAS Company Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAS_Customer_Unique_Id__c</fullName>
        <label>MAS Unique #</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MAS_Library__c</fullName>
        <label>MAS Library</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAS_Line_Number__c</fullName>
        <label>MAS Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MAS_Setup_Comment__c</fullName>
        <label>MAS Setup Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MAS_Unique_Text__c</fullName>
        <description>Formula field to convert MAS Unique Id to text.</description>
        <formula>TEXT( MAS_Customer_Unique_Id__c )</formula>
        <label>MAS Unique #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAS_VCR_Code__c</fullName>
        <label>MAS VCR Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automatic Price Adjustment</fullName>
                </value>
                <value>
                    <fullName>Automatic Price Group</fullName>
                </value>
                <value>
                    <fullName>Auto Price Group without messaging</fullName>
                </value>
                <value>
                    <fullName>Commission ID change</fullName>
                </value>
                <value>
                    <fullName>Contract renewal change</fullName>
                </value>
                <value>
                    <fullName>Decrease in price due to recycling material offset</fullName>
                </value>
                <value>
                    <fullName>Decrease in price due to roll back adjustment</fullName>
                </value>
                <value>
                    <fullName>Decrease in Seasonal Service</fullName>
                </value>
                <value>
                    <fullName>Decrease in Service</fullName>
                </value>
                <value>
                    <fullName>Increase in Permanent or Temporary Service</fullName>
                </value>
                <value>
                    <fullName>Increase in price: individually secured price increase</fullName>
                </value>
                <value>
                    <fullName>Increase in price due to adjustment</fullName>
                </value>
                <value>
                    <fullName>Increase in price due to Business Improvement Process (BIP)/accelerated price increase</fullName>
                </value>
                <value>
                    <fullName>Increase in price due to disposal pass through</fullName>
                </value>
                <value>
                    <fullName>Increase in price due to extra pickup</fullName>
                </value>
                <value>
                    <fullName>Increase in price due to fuel, environmental (EVF), and/or Regulatory Cost Recovery (RCR).</fullName>
                </value>
                <value>
                    <fullName>Increase in price due to recycling material offset</fullName>
                </value>
                <value>
                    <fullName>Increase in price without automated price increase message</fullName>
                </value>
                <value>
                    <fullName>Increase in Seasonal Service</fullName>
                </value>
                <value>
                    <fullName>Increase in Snapshot Service</fullName>
                </value>
                <value>
                    <fullName>Lost Bad Pay</fullName>
                </value>
                <value>
                    <fullName>Lost Business Cancellation</fullName>
                </value>
                <value>
                    <fullName>Lost Business Competition</fullName>
                </value>
                <value>
                    <fullName>Lost Business Divestiture</fullName>
                </value>
                <value>
                    <fullName>Lost Business Temporary Service</fullName>
                </value>
                <value>
                    <fullName>Lost Business Waste Stream</fullName>
                </value>
                <value>
                    <fullName>Lost Closed Business</fullName>
                </value>
                <value>
                    <fullName>Lost Due to Location Move</fullName>
                </value>
                <value>
                    <fullName>Lost Ownership</fullName>
                </value>
                <value>
                    <fullName>Lost Service Type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MAS_Waste_Stream__c</fullName>
        <label>MAS Waste Stream</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Area__c</fullName>
        <description>Which Market Area services this Container</description>
        <label>Market Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mid West</fullName>
                </value>
                <value>
                    <fullName>New England</fullName>
                </value>
                <value>
                    <fullName>South West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Material_Grade_Code__c</fullName>
        <description>Adding a new field for SDT-32105</description>
        <label>Material Grade Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Grade__c</fullName>
        <label>Material Grade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Prompt_ID__c</fullName>
        <description>This is used to store the material prompt id and pass to the IVR.</description>
        <label>Material Prompt ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>